--- a/src/main/webapp/WEB-INF/CSS/dica.css
+++ b/src/main/webapp/WEB-INF/CSS/dica.css
@@ -1,10 +1,25 @@
 .espaco-dica {
 
-    background-color: #ffffff; /* Cor de fundo branco */
+    background-color: #202020;; /* Cor de fundo branco */
     padding: 20px; /* Adicione preenchimento conforme necessário */
     border-radius: 8px; /* Adicione borda arredondada conforme necessário */
     width: 1300px;
-    height: 900px;
+    height: 1600px;
     margin-left: 15%;
     margin-top: 5%;
+}
+h1,h3,p,a{
+    color: #fff;
+}
+h1{
+    font-size: 70px;
+}
+p{
+    font-size: 20px;
+}
+a{
+    font-size: 20px;
+}
+a:hover{
+    color: #ff0077;
 }
