--- a/src/main/webapp/WEB-INF/CSS/nav.css
+++ b/src/main/webapp/WEB-INF/CSS/nav.css
@@ -90,4 +90,18 @@ h2 {
     margin-top: 30px;
     font-size: 30px;
 }
-
+.home-p{
+    color: #fff;
+    font-size: 30px;
+    margin-left: 13%;
+}
+.home-h{
+    font-size: 50px;
+}
+.b-busca{
+    margin-left: 10%;
+    margin-top: 5%;
+    font-size: 80px;
+    text-decoration: none;
+    color: #ff0077;
+}
